MD Extensions: Show load path for unpacked extensions.

Bug: 686473
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I28055c385165b29426e40ddbb8e6941ffa46659c
Reviewed-on: https://chromium-review.googlesource.com/769149
Reviewed-by: Dave Schuyler <dschuyler@chromium.org>
Commit-Queue: Demetrios Papadopoulos <dpapad@chromium.org>
Cr-Commit-Position: refs/heads/master@{#516977}
Former-commit-id: 8b0d797f9df885ff7e127cb5937dc8ed81e39f7e