chrome/browser/resources/md_extensions/item.js
@@ -52,6 +52,9 @@ cr.define('extensions', function() {
 
     /** @param {!chrome.developerPrivate.ExtensionInfo} extension */
     showItemOptionsPage(extension) {}
+
+    /** @param {string} id */
+    showInFolder(id) {}
   }
 
   const Item = Polymer({
