chrome/test/data/webui/extensions/extension_test_util.js
@@ -123,6 +123,9 @@ cr.define('extension_test_util', function() {
 
     /** @override */
     showItemOptionsPage: function(id) {},
+
+    /** @override */
+    showInFolder: function(id) {},
   };
 
   /**
